update de validar
