# swagger-output.json
@@ -11,7 +11,7 @@
     "http"
   ],
   "paths": {
-    "/tarefa/": {
+    "/imovel/": {
       "get": {
         "tags": [
           "Imovel"
@@ -24,6 +24,12 @@
           },
           "204": {
             "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -134,7 +140,7 @@
         }
       }
     },
-    "/tarefa/{id}": {
+    "/imovel/{id}": {
       "delete": {
         "tags": [
           "Imovel"
@@ -152,6 +158,46 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/login/": {
+      "post": {
+        "tags": [
+          "login"
+        ],
+        "summary": "gera a autenticação via JWT na cookie do navegador",
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "senha": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "404": {
             "description": "Not Found"
